--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/01-favicon.png" />
+  <link rel="icon" href="/01-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="A tonegrid synth using Elementary Audio" />
   <base target="_blank" rel="noreferrer" />
   <title>Elementary Grid</title>
+  <script type="module" src="/src/index.tsx"></script>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="app"></div>
 
 </body>
 
